# JiraTagger

./: .gitignore  README.md  pyproject.toml
jiratagger/: jira_tagger.py  main.py
jiratagger/app/: jira_tagger.py
jiratagger/components/: color_picker.py  issue_window.py  link_popup.py  menu.py
jiratagger/utils/: browser_utils.py  markdown_utils.py  state_manager.py
