[tool.poetry]
name = "jiratagger"
version = "0.1.0"
description = "A web application to go through a list of issue keys and write information about them to be applied in bulk"
authors = ["HackXIt <hackxit@gmail.com>"]
readme = "README.md"
packages = [
    { include = "jiratagger" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
ttkwidgets = "^0.13.0"
screeninfo = "^0.8.1"
pywin32 = "^308"
pandas = "^2.2.3"

[tool.poetry.scripts]
jiratagger = "jiratagger.main:main"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
